# cnc-fault-detector

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  eval_cm.txt  main.py  pyproject.toml
src/: dataset.py  evaluation.py  model.py  predict.py  train.py
